# cargo-fastdev

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  SUPPORTERS.md  TRADEMARKS.md  llms.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs
