[package]
name = "cargo-fastdev"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fast Rust dev loop: doctor/init/watch + cargo wrappers for quicker check/test/run."
repository = "https://github.com/pas7studio/cargo-fastdev"
homepage = "https://pas7.com.ua/"
readme = "README.md"
keywords = ["cargo", "rust", "developer-tools", "watch", "build"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
